# Karaoke

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json
Research/: UltraStar_Format_Specification_v1.1.0_Extended_With_Example.txt
scripts/: release.ps1  release.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/remote-ui/: index.html
src-tauri/src/: lib.rs  loudness.rs  main.rs  remote.rs  scan.rs
src/lib/parser/: encoding.ts  types.ts  ultrastar.ts
src/lib/playback/: clock.ts  gain.ts  loudnorm.ts  media.test.ts  media.ts  mp3.ts  transcode.ts
src/lib/queue/: queue.ts
src/lib/render/: layout.ts  lyricsRenderer.ts
src/lib/screens/: Intermission.svelte  Sing.svelte  SongList.svelte
src/lib/util/: path.test.ts  path.ts
src/routes/: +layout.svelte  +page.svelte
tests/: clock.test.ts  corpus.test.ts  fuzzy.test.ts  gain.test.ts  library.test.ts  loudness-queue.test.ts  loudnorm.test.ts  mp3.test.ts  parser.test.ts
tests/__snapshots__/: corpus.test.ts.snap
